--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -30,6 +30,7 @@
                 </div>
             </div>
 
+            <!-- Localisation -->
             <div class="col-md-3">
                 <h5>Localisation</h5>
                 <iframe class="w-100 rounded" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
@@ -42,6 +43,7 @@
 
         <hr class="my-4">
 
+        <!-- Copyright -->
         <div class="text-center" style="color: #B9F1C3;">
             <p>&copy; 2024 Aymen_Magri & Sara_Kalai</p>
         </div>
