--- a/src/app/compnents/plant-comment-admin/plant-comment-admin.component.html
+++ b/src/app/compnents/plant-comment-admin/plant-comment-admin.component.html
@@ -1,6 +1,6 @@
 <div class="container justify-content-center">
 
-    <!--  -------------------------------------------------------->
+    <!-- afficher les commentaires de la plante -->
     <div class="mb-5 mt-2">
         @for(com of tabcom;track $index){
         <div class="d-flex justify-content-center py-2">
