--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.html
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.html
@@ -1,5 +1,3 @@
-<!--  -->
-
 <div class="plant-card">
     <div class="plant-info">
         <h2>Informations sur la plante</h2>
@@ -40,6 +38,7 @@
         <p><strong>Durée de vie :</strong> {{plant.dureeVie}}</p>
     </div>
 
+    <!-- afficher les informations d'arrosage de la plante -->
     <div class="plant-watering">
         <h3>Arrosage</h3>
         <table class="tab table-striped table-bordered table-hover table-sm">
