--- a/src/app/compnents/plant-information/plant-information.component.html
+++ b/src/app/compnents/plant-information/plant-information.component.html
@@ -15,6 +15,7 @@
         <p><strong>Durée de vie :</strong> {{plant.dureeVie}}</p>
     </div>
 
+    <!-- afficher les informations d'arrosage de la plante -->
     <div class="plant-watering">
         <h3>Arrosage</h3>
         <table class="tab table-striped table-bordered table-hover table-sm">
