--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -68,7 +68,8 @@
 <app-quiz></app-quiz>
 
 <!-- ------------------------------ la navigation par catégorie ------------------------------ -->
-<h2 class="text-center mt-5">Nos catégories</h2>
+<h2 class="text-center mt-5">Nos catégories dans PlantBuddy</h2>
+<p class="text-muted text-center">Voici nos différentes catégories de plantes</p>
 
 <div class="d-flex justify-content-center row row-cols-1 row-cols-md-4" style="width: 100%;">
     <!-- ------------------------------ les fleurs ------------------------------ -->
