--- a/src/app/compnents/panier/panier.component.html
+++ b/src/app/compnents/panier/panier.component.html
@@ -82,4 +82,22 @@
             catalogue</a>
     </div>
     }
+
+    <!-- Modal Bootstrap pour le stock indisponible -->
+    <div class="modal fade" id="stockModal" tabindex="-1" aria-labelledby="stockModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="stockModalLabel">Stock Indisponible</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Nous sommes désolés, on ne peut fournir que <span class="text-danger">{{stock}}</span> de <span class="text-danger">{{name}}</span> .
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    </div>
+                </div>
+            </div>
+        </div>  
 </div>
