--- a/src/app/compnents/plant-item-admin/plant-item-admin.component.html
+++ b/src/app/compnents/plant-item-admin/plant-item-admin.component.html
@@ -1,57 +1,69 @@
-<div class="plant-item">  
+<div class="plant-item">
     <div class="card" style="width: 18rem;">
+        <!--afficher si la plante est en stock ou pas-->
         <div class="first">
-
-        <div class="d-flex justify-content-between align-items-center">
-
-            <span class="discount" [ngClass]="{'c1': plant.in_stock || plant.stock>0, 'c2': !plant.in_stock || plant.stock==0}">{{plant.in_stock==true && plant.stock>0 ? 'En stock'  : 'Rupture de stock'}}</span>
+            <div class="d-flex justify-content-between align-items-center">
+                <span class="discount"
+                    [ngClass]="{'c1': plant.in_stock || plant.stock>0, 'c2': !plant.in_stock || plant.stock==0}">{{plant.in_stock==true
+                    && plant.stock>0 ? 'En stock' : 'Rupture de stock'}}
+                </span>
+            </div>
         </div>
-    </div>
 
-    <img [src]="plant.images" width="100px" height="200px" class="card-img-top image" alt="...">
-    <div class="card-body" style="background-color: #bddac2; border: none;">
-
-        <h5 class="card-title title" style="color: #1C593A; font-size: 24px;">{{plant.name}}</h5>
-        <div class="d-flex flex-column mb-2 align-items-end">
-            <span class="new-price">{{plant.price | currency:'USD'}}</span>
-            <small class="old-price">{{plant.price + 2 | currency:'USD'}}</small>
+        <!--afficher l'image de la plante-->
+        <img [src]="plant.images" width="100px" height="200px" class="card-img-top image" alt="...">
+        <!--afficher le nom, le prix et la personnalité de la plante-->
+        <div class="card-body" style="background-color: #bddac2; border: none;">
+            <h5 class="card-title title" style="color: #1C593A; font-size: 24px;">{{plant.name}}</h5>
+            <div class="d-flex flex-column mb-2 align-items-end">
+                <span class="new-price">{{plant.price | currency:'USD'}}</span>
+                <small class="old-price">{{plant.price + 2 | currency:'USD'}}</small>
+            </div>
+            <p class="card-text" style=" font-size: 17px;"><span class="title">Personnalité : </span>
+                {{plant.personality}}.</p>
         </div>
-        <p class="card-text" style=" font-size: 17px;"><span class="title">Personnalité : </span> {{plant.personality}}.</p>
-    </div>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item" style=" font-size: 17px; background-color: #bddac2; border-bottom: 1px solid #1C593A;"><span class="title">Type : </span> {{plant.fun_filter}}</li>
-    </ul>
-    <div class="card-body d-flex justify-content-between" style="background-color: #bddac2;">
-        <!-- bouton pour supprimer un article -->
-        <button class="btn btn-danger" 
-                id="delete-btn" 
-                title="supprimer l'article" 
-                data-bs-toggle="modal" 
-                [attr.data-bs-target]="'#exampleModal'+plant.id">Supprimer</button>
-        <!-- bouton pour voir plus -->
-        <a [routerLink]="['/plantAdmin', plant.id]">
-            <button class="btn" 
-                    id="viewPlant" 
-                    title="voir plus">Voir plus</button>
-        </a>
-    </div>
-    <!-- Modal pour supprimer un article -->
-    <div class="modal fade" [id]="'exampleModal'+plant.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Suppression de {{plant.name}}</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Etes vous sure de vouloir supprimer <span class="text-danger">{{plant.name}}</span> du panier ?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-danger" (click)="onDelete(plant.id)" data-bs-dismiss="modal">Supprimer</button>
+        <!--afficher le type de la plante-->
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"
+                style=" font-size: 17px; background-color: #bddac2; border-bottom: 1px solid #1C593A;">
+                <span class="title">Type : </span> {{plant.fun_filter}}
+            </li>
+        </ul>
+        <!--afficher les boutons pour supprimer et voir plus-->
+        <div class="card-body d-flex justify-content-between" style="background-color: #bddac2;">
+            <!-- bouton pour supprimer un article -->
+            <button class="btn btn-danger" 
+                    id="delete-btn" 
+                    title="supprimer l'article" 
+                    data-bs-toggle="modal"
+                    [attr.data-bs-target]="'#exampleModal'+plant.id">Supprimer</button>
+            <!-- bouton pour voir plus -->
+            <a [routerLink]="['/plantAdmin', plant.id]">
+                <button class="btn" 
+                        id="viewPlant" 
+                        title="voir plus">Voir plus</button>
+            </a>
+        </div>
+        <!-- Modal pour supprimer un article -->
+        <div class="modal fade" [id]="'exampleModal'+plant.id" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Suppression de {{plant.name}}</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Etes vous sure de vouloir supprimer <span class="text-danger">{{plant.name}}</span> du panier
+                            ?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger" (click)="onDelete(plant.id)"
+                            data-bs-dismiss="modal">Supprimer</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-</div>
+    </div>
