--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.html
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.html
@@ -1,63 +1,82 @@
 <div class="plant-card">
-    <div class="plant-info">
-        <h2>Informations sur la plante</h2>
-        <p><strong>Personnalité :</strong> {{plant.personality}}</p>
-        <p><strong>Description :</strong> {{plant.description}}</p>
-        <p><strong>Maintenance :</strong> {{plant.entretien}}</p>
-        <p><strong>Type :</strong> {{plant.fun_filter}}</p>
-    </div>
-
-    <div class="plant-details">
-        <h3>Détails</h3>
-        <!-- prix -->
-        <p><strong>Prix :</strong> {{plant.price}} $</p>
-        <button class="save-btn" (click)="onHidePrix()">Modifier le prix</button>
-        <div [hidden]="hidePrix">
-            <input type="text" placeholder="Tapez le prix" class="modif-form" #prix>
-            <button class="save-btn" (click)="onSavePrix(prix.value)">Enregistrer</button>
-        </div>
-        <!-- stock -->
-        <p><strong>En Stock :</strong> {{plant.stock}} pièces</p>
-        <button class="save-btn" (click)="onHideStock()">Modifier le stock</button>
-        <div [hidden]="hideStock">
-            <input type="text" placeholder="Tapez le stock" class="modif-form" #stock>
-            <button class="save-btn" (click)="onSaveStock(stock.value)">Enregistrer</button>
-        </div>
-        <!-- en stock ou non -->
-        <p><strong>En Stock ou non :</strong> {{plant.in_stock ? 'Oui, en stock' : 'Non, n\'est pas en stock'}}</p>
-        <button class="save-btn" (click)="onHideInStock()">Modifier l'état de stock</button>
-        <div [hidden]="hideInStock">
-            <select name="inStock" id="inStock" class="modif-form" (change)="onSaveInStock($event)">
-                <option value="true" [selected]="plant.in_stock">Oui, en stock</option>
-                <option value="false" [selected]="!plant.in_stock">Non, n'est pas en stock</option>
-            </select>
-        </div>
-        <!-- date d'ajout -->
-        <p><strong>Date d'ajout :</strong> {{plant.date_ajout}}</p>
-        <!-- durée de vie -->
-        <p><strong>Durée de vie :</strong> {{plant.dureeVie}}</p>
-    </div>
-
-    <!-- afficher les informations d'arrosage de la plante -->
-    <div class="plant-watering">
-        <h3>Arrosage</h3>
-        <table class="tab table-striped table-bordered table-hover table-sm">
-            <thead>
-                <tr>
-                    <th>Saison</th>
-                    <th>Fréquence</th>
-                    <th>Quantité</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for(w of plant.arrosage;track $index){
-                <tr>
-                    <td>{{w.saison}}</td>
-                    <td>{{w.frequence}}</td>
-                    <td>{{w.quantite}}</td>
-                </tr>
+    <form>
+        <div class="plant-info d-flex flex-column">
+            <h2>Informations sur la plante</h2>
+            <!--Personnalité-->
+            <label for="personality">Personnalité :</label>
+            <input class="modif-form" type="text" id="personality" [(ngModel)]="plant.personality" name="personality"
+                placeholder="Personnalité">
+            <!--Description-->
+            <label for="description">Description :</label>
+            <textarea id="description" [(ngModel)]="plant.description" name="description"
+                placeholder="Description"></textarea>
+            <!--Maintenance-->
+            <label for="entretien">Maintenance :</label>
+            <textarea id="entretien" [(ngModel)]="plant.entretien" name="entretien" placeholder="Entretien"></textarea>
+            <!--Type-->
+            <label for="fun_filter">Type :</label>
+            <select name="fun_filter" id="fun_filter" [(ngModel)]="plant.fun_filter" name="fun_filter">
+                @for(f of filter;track $index){
+                <option [value]="f" [selected]="plant.fun_filter === f">{{f}}</option>
                 }
-            </tbody>
-        </table>
-    </div>
+            </select>
+            <!-- <input type="text" id="fun_filter" [(ngModel)]="plant.fun_filter" name="fun_filter" placeholder="Type"> -->
+        </div>
+
+        <div class="plant-details d-flex flex-column">
+            <h3>Détails</h3>
+            <!--Prix--> 
+            <label for="price">Prix :</label>
+            <input type="number" id="price" [(ngModel)]="plant.price" name="price" placeholder="Prix">
+            <!--Stock-->
+            <label for="stock">En Stock :</label>
+            <input type="number" id="stock" [(ngModel)]="plant.stock" name="stock" placeholder="Stock">
+            <!--In Stock-->
+            <label for="in_stock">En Stock ou non :</label>
+            <select id="in_stock" [(ngModel)]="plant.in_stock" name="in_stock">
+                <option [value]="true" [selected]="plant.in_stock === true">Oui, en stock</option>
+                <option [value]="false" [selected]="plant.in_stock === false">Non, n'est pas en stock</option>
+            </select>
+            <!--Date d'ajout-->
+            <label for="date_ajout">Date d'ajout :</label>
+            <input type="date" id="date_ajout" [(ngModel)]="plant.date_ajout" name="date_ajout" placeholder="Date d'ajout">
+            <!--Durée de vie-->
+            <label for="dureeVie">Durée de vie :</label>
+            <input type="text" id="dureeVie" [(ngModel)]="plant.dureeVie" name="dureeVie" placeholder="Durée de vie">
+        </div>
+
+        <div class="plant-watering">
+            <!--Arrosage-->
+            <h3>Arrosage</h3>
+            <table class="tab table-striped table-bordered table-hover table-sm">
+                <thead>
+                    <tr>
+                        <th>Saison</th>
+                        <th>Fréquence</th>
+                        <th>Quantité</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for(w of plant.arrosage;track $index){
+                    <tr>
+                        <td>
+                            <input type="text" [(ngModel)]="w.saison" name="arrosage_saison_{{$index}}"
+                                placeholder="Saison">
+                        </td>
+                        <td>
+                            <input type="text" [(ngModel)]="w.frequence" name="arrosage_frequence_{{$index}}"
+                                placeholder="Fréquence">
+                        </td>
+                        <td>
+                            <input type="text" [(ngModel)]="w.quantite" name="arrosage_quantite_{{$index}}"
+                                placeholder="Quantité">
+                        </td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+
+        <button type="submit" class="edit-btn" (click)="onUpdatePlant()">Enregistrer les modifications</button>
+    </form>
 </div>
