--- a/src/app/compnents/passer-commande/passer-commande.component.html
+++ b/src/app/compnents/passer-commande/passer-commande.component.html
@@ -2,7 +2,7 @@
     
     <div class="col-lg-4 contact-details">
         <img src="passerCommande.png" alt="Login Image" />
-        <h2>Passer à la caisse</h2>
+        <h2>Passer la commande</h2>
         <p>Veuillez entrer vos informations </p>
     </div>
 
