--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.html
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.html
@@ -1,48 +1,121 @@
 <div class="plant-card">
-    <form>
+    <form [formGroup]="planteForm" (ngSubmit)="onUpdatePlant()">
         <div class="plant-info d-flex flex-column">
             <h2>Informations sur la plante</h2>
-            <!--Personnalité-->
-            <label for="personality">Personnalité :</label>
-            <input class="modif-form" type="text" id="personality" [(ngModel)]="plant.personality" name="personality"
-                placeholder="Personnalité">
-            <!--Description-->
-            <label for="description">Description :</label>
-            <textarea id="description" [(ngModel)]="plant.description" name="description"
-                placeholder="Description"></textarea>
-            <!--Maintenance-->
-            <label for="entretien">Maintenance :</label>
-            <textarea id="entretien" [(ngModel)]="plant.entretien" name="entretien" placeholder="Entretien"></textarea>
-            <!--Type-->
-            <label for="fun_filter">Type :</label>
-            <select name="fun_filter" id="fun_filter" [(ngModel)]="plant.fun_filter" name="fun_filter">
-                @for(f of filter;track $index){
-                <option [value]="f" [selected]="plant.fun_filter === f">{{f}}</option>
+              <!--Nom-->
+              <label for="nom">Nom :</label>
+              <input class="modif-form" type="text" id="nom" formControlName="nom" >
+                 
+              @if(nom?.errors?.['required'] && nom?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(nom?.errors?.['minlength'] && nom?.touched){
+                <p class="pAlert">Minimum 3 caractères</p>
+                }
+                @if(nom?.errors?.['maxlength'] && nom?.touched){
+                <p class="pAlert">Maximum 20 caractères</p>
+                }<!--categorie-->
+            <label for="categorie">Catégorie :</label>
+            <select name="category" id="category" class="form-select" formControlName="categorie">
+                @for(c of cat ; track $index){
+                <option [value]="c">{{c}}</option>
                 }
             </select>
-            <!-- <input type="text" id="fun_filter" [(ngModel)]="plant.fun_filter" name="fun_filter" placeholder="Type"> -->
+
+            <!--Personnalité-->
+            <label for="personality">Personnalité :</label>
+            <input class="modif-form" type="text" id="personality" formControlName="personalite" >
+           
+            @if(personalite?.errors?.['required'] && personalite?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(personalite?.errors?.['minlength'] && personalite?.touched){
+                <p class="pAlert">Minimum 3 caractères</p>
+                }
+                @if(personalite?.errors?.['maxlength'] && personalite?.touched){
+                <p class="pAlert">Maximum 20 caractères</p>
+                }
+                 <!--Description-->
+            <label for="description">Description :</label>
+            <textarea id="description" formControlName="description"></textarea>
+            @if(description?.errors?.['required'] && description?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(description?.errors?.['minlength'] && description?.touched){
+                <p class="pAlert">Minimum 3 caractères</p>
+                }
+                @if(description?.errors?.['maxlength'] && description?.touched){
+                <p class="pAlert">Maximum 100 caractères</p>
+                }
+            <!--Maintenance-->
+            <label for="entretien">Maintenance :</label>
+            <select name="" id="" formControlName="maintenance">
+                @for(m of maintenance;track $index){
+                    <option [value]="m">{{m}}</option>
+                }
+            </select>
+            <!--Type-->
+            <label for="fun_filter">Type :</label>
+            <select  id="fun_filter" formControlName="filter">
+                @for(f of filter;track $index){
+                <option [value]="f">{{f}}</option>
+                }
+            </select>
         </div>
 
         <div class="plant-details d-flex flex-column">
             <h3>Détails</h3>
-            <!--Prix--> 
+            <!--Prix-->
             <label for="price">Prix :</label>
-            <input type="number" id="price" [(ngModel)]="plant.price" name="price" placeholder="Prix">
+            <input type="number" id="price" formControlName="prix">
+            @if(prix?.errors?.['min'] && prix?.dirty){
+                <p class="pAlert">Le prix doit être supérieur a 5</p>
+                }
+                @if(prix?.errors?.['required'] && prix?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(prix?.errors?.['pattern'] && prix?.touched){
+                <p class="pAlert">Le prix doit être un nombre</p>
+                }
             <!--Stock-->
             <label for="stock">En Stock :</label>
-            <input type="number" id="stock" [(ngModel)]="plant.stock" name="stock" placeholder="Stock">
+            <input type="number" id="stock" formControlName="stock">
+            @if(stock?.errors?.['min'] && stock?.dirty){
+                <p class="pAlert">Minimum 1 en stock</p>
+                }
+                @if(stock?.errors?.['required'] && stock?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(stock?.errors?.['pattern'] && stock?.touched){
+                <p class="pAlert">Le stock doit être un nombre</p>
+                }
             <!--In Stock-->
             <label for="in_stock">En Stock ou non :</label>
-            <select id="in_stock" [(ngModel)]="plant.in_stock" name="in_stock">
-                <option [value]="true" [selected]="plant.in_stock === true">Oui, en stock</option>
-                <option [value]="false" [selected]="plant.in_stock === false">Non, n'est pas en stock</option>
+            <select id="in_stock" formControlName="enStock">
+                <option [value]="true">Oui, en stock</option>
+                <option [value]="false">Non, n'est pas en stock</option>
             </select>
             <!--Date d'ajout-->
             <label for="date_ajout">Date d'ajout :</label>
-            <input type="date" id="date_ajout" [(ngModel)]="plant.date_ajout" name="date_ajout" placeholder="Date d'ajout">
+            <input type="date" id="date_ajout" formControlName="dateAjout">
+            @if(dateAjout?.errors?.['required'] && dateAjout?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
             <!--Durée de vie-->
             <label for="dureeVie">Durée de vie :</label>
-            <input type="text" id="dureeVie" [(ngModel)]="plant.dureeVie" name="dureeVie" placeholder="Durée de vie">
+            <input type="text" id="dureeVie" formControlName="durVie">
+            @if(durVie?.errors?.['required'] && durVie?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(durVie?.errors?.['pattern'] && durVie?.touched){
+                <p class="pAlert">La durée de vie doit être sous la forme "1-2 ans"</p>
+                }
+            <!-- image -->
+            <label for="img">Image</label>
+            <input type="text" id="img" formControlName="img">
+            @if(img?.errors?.['required'] && img?.touched){
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
         </div>
 
         <div class="plant-watering">
@@ -56,20 +129,17 @@
                         <th>Quantité</th>
                     </tr>
                 </thead>
-                <tbody>
-                    @for(w of plant.arrosage;track $index){
-                    <tr>
+                <tbody formArrayName="arrosage">
+                    @for(w of watering.controls;track $index){
+                    <tr [formGroupName]="$index">
                         <td>
-                            <input type="text" [(ngModel)]="w.saison" name="arrosage_saison_{{$index}}"
-                                placeholder="Saison">
+                            <input type="text" formControlName="saison" >
                         </td>
                         <td>
-                            <input type="text" [(ngModel)]="w.frequence" name="arrosage_frequence_{{$index}}"
-                                placeholder="Fréquence">
+                            <input type="text" formControlName="frequence">
                         </td>
                         <td>
-                            <input type="text" [(ngModel)]="w.quantite" name="arrosage_quantite_{{$index}}"
-                                placeholder="Quantité">
+                            <input type="text" formControlName="quantite">
                         </td>
                     </tr>
                     }
@@ -77,6 +147,6 @@
             </table>
         </div>
 
-        <button type="submit" class="edit-btn" (click)="onUpdatePlant()">Enregistrer les modifications</button>
+        <button type="submit" class="edit-btn" [disabled]="planteForm.invalid">Enregistrer les modifications</button>
     </form>
 </div>
