--- a/src/app/compnents/plant-detail-admin/plant-detail-admin.component.html
+++ b/src/app/compnents/plant-detail-admin/plant-detail-admin.component.html
@@ -36,6 +36,9 @@
                 <a [routerLink]="['descriptionAdmin']" routerLinkActive="active" title="Description">Description</a>
             </div>
             <div class="col-md-2">
+                <a [routerLink]="['modificationAdmin']" routerLinkActive="active" title="Modification">Modification</a>
+            </div>
+            <div class="col-md-2">
                 <a [routerLink]="['commentsAdmin']" routerLinkActive="active" title="Commentaires">Commentaires</a>
             </div>
         </div>
