--- a/src/app/compnents/plant-comment/plant-comment.component.css
+++ b/src/app/compnents/plant-comment/plant-comment.component.css
@@ -71,7 +71,7 @@
 }
 
 .submit-btn {
-    background-color: #1C593A;
+    background-color: #629A74;
     color: #ffffff;
     width: 20%;
     font-size: 1rem;
